--- a/viewer2.html
+++ b/viewer2.html
@@ -18,6 +18,10 @@
   <body>
     <!-- <progress value="0" max="100" id="progressBar"></progress> -->
     <main>
+      <div class="map">
+        <img src="map3.png">
+        <div id="point">■</div>
+      </div>
     </main>
     <script type="module" src="sketch2.js"></script>
   </body>
